--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ app/record
 app/__pycache__
 app/test.py
 app/models
+
+HiBujdosoandJesper.png
+mel_spectogram.png
+MelSpectrogram.png
+Spectigrammy.png
