--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ HiBujdosoandJesper.png
 mel_spectogram.png
 MelSpectrogram.png
 Spectigrammy.png
+report/
+record/
+
 models/LDA_model.sav
 models/LDA_model.sav
 models/LDA_model - Kopi.sav
